--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {},
+  "peerDependencies": {
+    "hubot": ">=2.0"
+  },
+  "devDependencies": {
+    "coffee-script": ">=1.2.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tylerlong/hubot-glip.git"
