--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "Hubot adapter to use with Glip",
   "main": "./glip",
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
-    "parent-require": "^1.0.0"
+    "async": "^2.0.1",
+    "fast_bindall": "0.0.1",
+    "parent-require": "^1.0.0",
+    "socket.io-client": "^1.4.8",
+    "underscore": "^1.8.3"
   },
   "peerDependencies": {
     "hubot": ">=2.0"
