--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.7.0",
   "description": "Hubot adapter to use with Glip",
   "main": "./glip",
-  "scripts": {},
+  "scripts": {
+    "upgrade": "ncu -ua && yarn upgrade"
+  },
   "dependencies": {
-    "async": "^2.0.1",
+    "async": "^2.1.4",
     "fast_bindall": "0.0.1",
     "parent-require": "^1.0.0",
-    "socket.io-client": "^1.4.8",
+    "socket.io-client": "^1.7.2",
     "underscore": "^1.8.3"
   },
   "peerDependencies": {
     "hubot": ">=2.0"
   },
   "devDependencies": {
-    "coffee-script": ">=1.2.0"
+    "coffee-script": ">=1.12.2",
+    "npm-check-updates": "^2.8.9"
   },
   "repository": {
     "type": "git",
