--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "fast_bindall": "0.0.1",
+    "glip.socket.io": "^0.1.0",
     "parent-require": "^1.0.0",
     "socket.io-client": "^1.7.2",
     "underscore": "^1.8.3"
