--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hubot-glip",
-  "version": "0.7.0",
+  "version": "0.7.2",
   "description": "Hubot adapter to use with Glip",
-  "main": "./glip",
+  "main": "index.js",
   "scripts": {
     "upgrade": "ncu -ua && yarn upgrade"
   },
