--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "hubot-glip",
-  "version": "2.0.0-alpha.5",
+  "version": "2.0.0-alpha.6",
   "description": "Hubot adapter to use with Glip",
   "main": "src/index.bundle.js",
   "scripts": {
     "upgrade": "ncu -ua && yarn upgrade",
-    "build": "webpack --progress --colors --watch"
+    "build": "node -r babel-register node_modules/.bin/webpack --progress --colors --watch"
   },
   "dependencies": {
-    "glip-client": "^0.4.1",
+    "glip-client": "^0.4.7",
     "parent-require": "^1.0.0"
   },
   "peerDependencies": {
-    "hubot": ">=2.0"
+    "hubot": "^2.19.0"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.6",
-    "json-loader": "^0.5.4",
-    "npm-check-updates": "^2.8.9",
-    "standard": "^8.6.0",
-    "webpack": "^1.14.0"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.2.2",
+    "npm-check-updates": "^2.10.4",
+    "standard": "^9.0.2",
+    "webpack": "^2.3.2",
+    "webpack-node-externals": "^1.5.4"
   },
   "repository": {
     "type": "git",
