--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "hubot-glip",
-  "version": "0.8.6",
+  "version": "0.9.0",
   "description": "Hubot adapter to use with Glip",
   "main": "src/index.bundle.js",
   "scripts": {
     "upgrade": "ncu -ua && yarn upgrade",
-    "build": "webpack --progress --colors --watch"
+    "build": "node -r babel-register node_modules/.bin/webpack --progress --colors --watch"
   },
   "dependencies": {
     "glip.socket.io": "tylerlong/glip.socket.io",
@@ -15,13 +15,13 @@
     "hubot": ">=2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "json-loader": "^0.5.4",
-    "npm-check-updates": "^2.8.9",
-    "standard": "^8.6.0",
-    "webpack": "^1.14.0"
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.3.2",
+    "npm-check-updates": "^2.10.4",
+    "standard": "^9.0.2",
+    "webpack": "^2.3.2",
+    "webpack-node-externals": "^1.5.4"
   },
   "repository": {
     "type": "git",
