--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.bundle.js",
   "scripts": {
     "upgrade": "ncu -ua && yarn upgrade",
-    "build": "node -r babel-register node_modules/.bin/webpack --progress --colors --watch"
+    "build": "node -r babel-register node_modules/.bin/webpack --progress --colors"
   },
   "dependencies": {
     "glip-client": "^0.4.7",
