--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-glip",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Hubot adapter to use with Glip",
   "main": "src/index.bundle.js",
   "scripts": {
@@ -8,8 +8,8 @@
     "build": "node -r babel-register node_modules/.bin/webpack --progress --colors"
   },
   "dependencies": {
-    "glip-client": "^0.4.7",
-    "parent-require": "^1.0.0"
+    "parent-require": "^1.0.0",
+    "ringcentral-ts": "^0.9.1"
   },
   "peerDependencies": {
     "hubot": "^2.19.0"
