--- a/.ackrc
+++ b/.ackrc
@@ -1,2 +1,3 @@
---ignore-file=match:/bundle\.js/
---ignore-file=match:/^yarn\.lock/
+--ignore-file=match:/^yarn\.lock$/
+--ignore-file=match:/^yarn-error\.log$/
+--ignore-dir=dist
