--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   "main": "dist/main.js",
   "module": "src/index.js",
   "scripts": {
-    "build": "webpack --progress --colors"
+    "release": "webpack --progress --colors"
   },
   "dependencies": {
     "parent-require": "^1.0.0",
-    "ringcentral-ts": "^0.9.1"
+    "ringcentral-js-concise": "^0.5.5"
   },
   "peerDependencies": {
     "hubot": "^3.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "eslint-plugin-html": "^4.0.5",
     "standard": "^12.0.1",
