--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-glip",
-  "version": "2.2.6",
+  "version": "2.2.7",
   "description": "Hubot adapter to use with Glip",
   "keywords": [
     "glip",
@@ -14,8 +14,7 @@
   },
   "author": "Tyler Long <tyler4long@gmail.com> (https://github.com/tylerlong)",
   "license": "MIT",
-  "main": "dist/main.js",
-  "module": "src/index.js",
+  "main": "src/index.bundle.js",
   "scripts": {
     "release": "webpack --progress --colors"
   },
@@ -28,17 +27,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-loader": "6.4.1",
     "babel-preset-env": "^1.7.0",
     "eslint-plugin-html": "^4.0.5",
     "standard": "^12.0.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
+    "webpack": "2.3.2",
     "webpack-node-externals": "^1.7.2",
     "yarn-upgrade-all": "^0.3.0"
-  },
-  "files": [
-    "dist/*",
-    "src/*",
-    "yarn.lock"
-  ]
+  }
 }
