--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubot-ringcentral",
-  "version": "2.4.2",
+  "version": "2.5.0",
   "description": "Hubot adapter to use with RingCentral Team Messaging",
   "keywords": [
     "glip",
@@ -31,6 +31,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint-plugin-html": "^4.0.5",
+    "hubot": "2.19.0",
     "standard": "^12.0.1",
     "webpack": "2.3.2",
     "webpack-node-externals": "^1.7.2",
